--- a/conFusion/package.json
+++ b/conFusion/package.json
@@ -2,6 +2,8 @@
   "name": "conFusion",
   "private": true,
   "devDependencies": {
+    "grunt-contrib-clean": "^0.7.0",
+    "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-jshint": "^0.11.3",
     "jit-grunt": "^0.9.1",
     "jshint-stylish": "^2.1.0",
